NOCC 0.9.5	??   ??, 2001

	* Move previous strip slashes to before sending mail
	* Strip slashes from body on reply.
	* Prevented preferences from creating prefs/sig until user is
	  properly logged in.
	* Added error handling for prefs/sig file writing errors
	* Fixed cut_addresses to handle addresses with quoted commas.
	* Fixed various XHTML incompliances.
	* Added the srpski jezik language.
	* Updated Bulgarian translation.
	* Added optional 'base_uri' configuration parameter (#463390)
	* Added patch from Arno Bean to make checkbox labels clickable
	  in prefs.
	* Added tooltip for full e-mail address in message list.
	* Moved 'select all' and 'delete' buttons, top and bottom.
	* Added a 'send confirmed' page so user is sure mail was accepted.
	* Present an error when sendaction has not been set (e.g javascript disabled)
	* Replaced error_log calls with a sessionlog member in class_smtp.php
	* Replaced PEAR::Error with simple Exception class.
	* Strip slashes from user while logging in (#465418)
	* Bypassed redundant 'check_form' javascript method.
	* Added 'outlook-style quoting' preference (#459461)
	* Added config option to present delete icon as a button.
	* Added 'hide addresses' preference (#471806).
	* Moved inclusion of 'menu_inbox' so when the wrong password is
	  supplied, it doesn't present options for 'Inbox', 'Preferences' etc
	* Removed restriction on the size of left/right arrow images.
	* Added start/end identifier comments to html templates.
	* Fixed several potential 'uninitialised variable' warnings
	* Fixed order of session headers
	* Added error logging of file opening problems in prefs.php.
	* Updated prefs.php to use domain in prefs filename (fixes #472923)
	* Added logic patch for displaying images (from Colin Stephenson #427202).
	* Added 'Loading image ...' message.
	* Header displays email address from preferences, if available.
	* Added 'CC self' preference to receive a copy of outgoing emails.